--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -221,7 +221,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 
                                     Newest  Users                                    
                                         
-                                    <div class="prod-widget-box newusers">
+                                    <div class="newusers">
                                          <?php 
                                         foreach ($this->users as $user) {                                  
                                             ?>
