--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -112,7 +112,7 @@ $time_start = microtime(true);
                       
 
                       <div  class="row sidebar-right-info" >                                
-                          <span class="newsTitle"> Blog </span>
+                          <span class="newsTitle"> News </span>
                           <div class="prod-widget-box right bgwhite" id="rss-feeds"> </div>                  
                       <?php
                       if (count($comments) > 0) {
