--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -64,6 +64,7 @@ $auth = Zend_Auth::getInstance();
 $member = $getAuthUser->getAuthUser();
 $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 ?>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <link href="/theme/flatui/css/style-index-plingcom.css" rel="stylesheet">
 
     <header id="page_header" xmlns="http://www.w3.org/1999/html">
@@ -162,7 +163,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
         <?php  echo $this->render('explore/partials/filter.phtml'); ?> 
 </div>
 <div class="GridFlex-cell content">   
-        <div class="container">
+        <div class="contentcontainer">
                         <div class="row ">   
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                                                                  
                                         <span>  Themes </span>
@@ -219,7 +220,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                         <div class="row" style="padding-top: 20px;">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                                    Newest  Users                                    
+                                    <span class="labelTitle" >Newest  Community Members   </span>                                 
                                         
                                     <div class="newusers">
                                          <?php 
@@ -246,8 +247,37 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 </div>
 </div>
 <div class="GridFlex-cell sidebar-right">   
+        <aside  id="explore-sidebar" >     
 
-        <span> Lastest 10 Comments </span>            
+        <div class="downloadDiv" >
+            <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
+        </div>
+
+        <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin')  : ?>
+        <div class="donateDiv" >
+        <?php 
+                  $identity = Zend_Auth::getInstance()->getIdentity();
+                  if(!$this->isSupporter($identity->member_id)) {                                                  
+         ?>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+            <?php }?>
+        </div>
+        <?php endif; ?>
+
+        <div  class="row sidebar-right-info" >                                
+            <span class="newsTitle"> News </span>
+            <div class="prod-widget-box right " id="rss-feeds"> </div>                  
+      
+        <span> Lastest 10 Comments </span>
+         <div class="prod-widget-box right " id="lastcomments">
+                <?php
+                foreach ($this->comments as $this->comment) {
+                    echo $this->render('explore/partials/comment.phtml');
+                }
+                ?>
+            </div>
+
+            <?php /*
         <div class="prod-widget-box ">
             <?php                       
             $this->rownum = 1;                                         
@@ -257,6 +287,8 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                     }                                 
              ?> 
         </div>
+                */?>
+        </aside>
 </div>
 </div>
 
@@ -289,5 +321,6 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
     '    $(document).ready(function(){
                 MenuHover.setup();                    
                 LoginContainer.update();
+                RssNews.setup();                
             });
         ');
