--- a/httpdocs/theme/flatui/css/style-index-plingcom.css
+++ b/httpdocs/theme/flatui/css/style-index-plingcom.css
@@ -187,6 +187,7 @@
   .mainpage-kde-store .sidebar-left{
     padding-top: 20px;
     background-color: #f1f1f1;
+    border-right: 1px solid #ccd4d8;
   }
   .mainpage-kde-store .content{
     padding-top: 15px;    
