--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -53,7 +53,7 @@
 			width: 92%;
 		}
 	}
-        .donateDiv{
+        .supportDiv{
 		width: 92%;
                 padding-bottom: 10px; 
 		text-align: center;
