--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -102,9 +102,11 @@ $time_start = microtime(true);
                       <div class="supportDiv" >
                       <?php 
                                 $identity = Zend_Auth::getInstance()->getIdentity();
-                                if(null == $identity || !$this->isSupporter($identity->member_id)) {                                                  
-                       ?>
+                                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+                      ?>
                           <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+                      <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
                       <?php }?>
                       </div>
                       
