--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -294,7 +294,7 @@
                                      
                                      if ( ocsUrl) {
                                             if(this.active && this.ocs_compatible == 1){
-                                                installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">OCS-Install</a>';                                               
+                                                installButton = '<a href="' + ocsUrl + '" class="btn btn-native btn-min-width">Install</a>';                                               
                                             } else {
                                                 installButton = '<a href="#" class="btn btn-min-width disabled">INCOMPATIBLE</a>';                                               
                                             }                                         
