--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -166,7 +166,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
         <div class="contentcontainer">
                         <div class="row ">   
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                                                                  
-                                        <span>  Themes </span>
+                                        <span> <a href="/browse/cat/3"> Themes </a></span>
                                         <div class="prod-widget-box new-products" >
                                         <?php
                                         $this->rownum = 1; 
@@ -178,7 +178,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                         <span>Add-Ons</span>                                         
+                                         <span><a href="/browse/cat/3">Add-Ons</a></span>                                         
                                          <div class="prod-widget-box new-products" >
                                          <?php
                                          $this->rownum = 1; 
@@ -192,7 +192,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                         </div>
                         <div class="row" style="padding-top: 20px;">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                          
-                                                <span>Wallpapers</span>                                              
+                                                <span><a href="/browse/cat/3">Wallpapers</a></span>                                              
                                                 <div class="prod-widget-box new-products" >
                                                 <?php
                                                 $this->rownum = 1; 
@@ -204,7 +204,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                                                 </div>                             
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                            
-                                               <span>  Apps  </span>                                               
+                                               <span> <a href="/browse/cat/3"> Apps </a> </span>                                               
                                                <div class="prod-widget-box new-products" >
                                                <?php
                                                $this->rownum = 1; 
