--- a/httpdocs/theme/flatui/css/style-index-plingcom.css
+++ b/httpdocs/theme/flatui/css/style-index-plingcom.css
@@ -196,9 +196,12 @@
   .mainpage-kde-store .sidebar-right{
     padding-top: 20px;
     min-width: 320px !important;
-    border-left: 1px solid #ccd4d8;
+   
     padding-left: 10px;
+    /*
+     border-left: 1px solid #ccd4d8;
     background-color: #f1f1f1;
+    */
   }
    .mainpage-kde-store .sidebar-right .productrow{
      padding-bottom: 5px;
@@ -236,4 +239,11 @@
 
 .mainpage-kde-store  .downloadDiv{
   background-color: transparent !important;
+}
+
+.mainpage-kde-store  #rss-feeds{
+  border: 1px solid #ccd4d8 !important;
+}
+.mainpage-kde-store  .sidebar-right-info{
+  padding-left: 10px;
 }
