--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -28,13 +28,13 @@ $this->products = $modelInfo->getLastProductsForHostStores(10);
 $featureProducts = $modelInfo->getFeaturedProductsForHostStores(100);
 
 // LIVE
-// $this->productsDesktop = $modelInfo->getLastProductsForHostStores(5,148);
+// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381, 386, 107, 147, 146, 151");
 // $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,152);
+// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152, 277, 384");
 // $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
 // CC TEST
-$this->productsDesktop = $modelInfo->getLastProductsForHostStores(5,3);
+$this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
 $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
@@ -170,7 +170,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                                         <div class="prod-widget-box new-products" >
                                         <?php
                                         $this->rownum = 1; 
-                                        foreach ($this->productsDesktop as $this->product) {
+                                        foreach ($this->productsThemes as $this->product) {
                                             echo $this->render('home/partials/product_plingcom.phtml');
                                             $this->rownum++;
                                         }           
