--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -104,9 +104,9 @@ $time_start = microtime(true);
                                 $identity = Zend_Auth::getInstance()->getIdentity();
                                 if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
                       ?>
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
                       <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us<br>of Opendesktop.org</a>
                       <?php }?>
                       </div>
                       
