--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -134,7 +134,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
         <div id="review-product-modal" class="modal fade noid" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
            <div class="modal-content" style="min-height: 100px; ">
-                <span style="text-align: center; display: block; padding-top: 30px">Please login in.</span>
+                <span style="text-align: center; display: block; padding-top: 30px">Please login.</span>
            </div>
          </div>          
         </div>
