--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -90,9 +90,9 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                               $identity = Zend_Auth::getInstance()->getIdentity();
                               if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
                     ?>
-                        <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+                        <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
                     <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                        <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
+                        <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us<br>of Opendesktop.org</a>
                     <?php }?>
                     </div>
 
