--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -106,7 +106,7 @@ $time_start = microtime(true);
                       ?>
                           <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
                       <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us<br>of Opendesktop.org</a>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
                       <?php }?>
                       </div>
                       
