--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -25,16 +25,16 @@ $this->comments = $modelInfo->getLatestComments(10);
 $this->users = $modelInfo->getNewActiveMembers(18);
 
 // LIVE
-// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
+$this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
+$this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
+$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
+$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
 // CC TEST
-$this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
-$this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
+// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
+// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
+// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
+// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
 
 
 $storeCatIds = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
@@ -243,9 +243,9 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
                   $identity = Zend_Auth::getInstance()->getIdentity();
                   if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
         ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
         <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
         <?php }?>
         </div>
 
