--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -21,40 +21,42 @@
  **/
 ?>
 <div class="productrow"><div class="row">            
- <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
-    <span class="num"><?=$this->rownum ?>.</span>
+ <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">    
         <div class="text-center">
-            <img class="productimg" src="<?=$this->Image($this->product['image_small'], array('width' => 90, 'height' => 90))?>" />
+            <img class="productimg" src="<?=$this->Image($this->product['image_small'], array('width' => 80, 'height' => 80))?>" />
         </div>
  </div>
- <div class="col-lg-6 col-md-6 col-sm-4 col-xs-4">
+ <div class="col-lg-7 col-md-6 col-sm-4 col-xs-4">
         <a href="<?=$this->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?>
             <span class="version"><?=Default_Model_HtmlPurify::purify($this->product['version'])?>
             </span>
         </a>
         <span style="display: block; margin-bottom: 5px"><?=$this->fetchCategoriesForProductAsString($this->product['project_id'])?></span>
         
-        <?php 
-          $helperPackageTypes = new Default_View_Helper_FetchProjectPackageTypes();
-          $type = $helperPackageTypes->FetchProjectPackageTypes($this->product['project_id']);
-          if(!empty($type)){
-            ?>
-            <?=$type ?>
-        <?php } ?>
-        <div class="productInfo" style="float: left;">
-               
+       
+        <div class="productInfo">
+        
+        <span class="cntComments">
         <?php
             //$count_plingers = $this->product['count_plingers'];
-            $count_comments = $this->product['count_comments'];
-            
+            $count_comments = $this->product['count_comments'];            
             //echo ($count_plingers>0 ? '<span style="padding-top: 5px; padding-right: 6px; font-size: smaller;" class="cntSupporters">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
-            echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
-            
+            echo ($count_comments>0 ? $count_comments.' comment':'').($count_comments>1?'s':'');            
         ?>
+        </span>
+
+          <?php          
+          $type = $this->FetchProjectPackageTypesPureStrings($this->product['project_id']);
+          if(!empty($type)){
+            ?>           
+            <span class="packagetypeos" >
+            <?=$this->truncate(Default_Model_HtmlPurify::purify($type), 30, '...', false, true)?>
+             </span>
+        <?php } ?>
         </div>
  </div>
  <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
-    <div class="rating">
+    
         <?php                
                 $this->widgetRating = new stdClass();
                 $this->widgetRating->project_id = $this->product['project_id'];
@@ -63,7 +65,7 @@
                 $this->widgetRating->count_dislikes =$this->product['count_dislikes'];
                 echo $this->render('partials/widgetRating.phtml'); 
         ?>
-    </div>
+    
     <span class="time"><?=$this->printDate($this->product['changed_at']==null?$this->product['created_at']:$this->product['changed_at'])?>
     </span>
 </div>
