--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -241,10 +241,12 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
         <div class="supportDiv" >
         <?php 
                   $identity = Zend_Auth::getInstance()->getIdentity();
-                  if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+                  if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' &&
+                    (null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))
+                        )) {                                                  
         ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-        <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+        <?php } else if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' && (null != $identity && $this->isSupporter($identity->member_id))) { ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
         <?php }?>
         </div>
