--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -94,26 +94,19 @@ $time_start = microtime(true);
                       <div class="downloadDiv" >
                           <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
                       </div>
-<<<<<<< HEAD
-              
-                      <?php //20171006 Ronald: vorerst auskommentiert.  ?>
-                      <?php if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin2222')  : ?>
-                      <div class="donateDiv" >
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-=======
-
+                      
                       <div class="supportDiv" >
-                      <?php 
-                                $identity = Zend_Auth::getInstance()->getIdentity();
-                                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
-                      ?>
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-                      <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
-                      <?php }?>
->>>>>>> aca3c24... startpage
-                      </div>
-                      <?php endif; ?>
+                          <?php 
+                                    $identity = Zend_Auth::getInstance()->getIdentity();
+                                    if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' &&
+                                      (null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))
+                                          )) {                                                  
+                          ?>
+                              <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
+                          <?php } else if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' && (null != $identity && $this->isSupporter($identity->member_id))) { ?>
+                              <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
+                          <?php }?>
+                          </div>
                       
 
                       <div  class="row sidebar-right-info" >                                
