--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -30,6 +30,12 @@ $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
+// CC TEST
+// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
+// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
+// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
+// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
+
 
 $storeCatIds = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
 $this->categories = $storeCatIds;
@@ -235,10 +241,12 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
         <div class="supportDiv" >
         <?php 
                   $identity = Zend_Auth::getInstance()->getIdentity();
-                  if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+                  if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' &&
+                    (null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))
+                        )) {                                                  
         ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-        <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+        <?php } else if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' && (null != $identity && $this->isSupporter($identity->member_id))) { ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
         <?php }?>
         </div>
