--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -47,8 +47,12 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                   </li>
                   <li <?=$this->filters['order'] == 'top' ? 'class="active"' :'' ?>>
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
-                          'top') ?>"><span><?= $this->translate('Greatest') ?></span></a>
-                  </li>                
+                          'top') ?>"><span><?= $this->translate('Top') ?></span></a>
+                  </li>      
+                  <li <?=$this->filters['order'] == 'downloadQuarter' ? 'class="active"' :'' ?>>
+                      <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
+                          'downloadQuarter') ?>"><span><?= $this->translate('Most Downloaded') ?></span></a>
+                  </li>             
               </ul>
             </div>
 
@@ -94,19 +98,17 @@ $time_start = microtime(true);
                       <div class="downloadDiv" >
                           <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
                       </div>
-                      
+
                       <div class="supportDiv" >
-                          <?php 
-                                    $identity = Zend_Auth::getInstance()->getIdentity();
-                                    if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' &&
-                                      (null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))
-                                          )) {                                                  
-                          ?>
-                              <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-                          <?php } else if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' && (null != $identity && $this->isSupporter($identity->member_id))) { ?>
-                              <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
-                          <?php }?>
-                          </div>
+                      <?php 
+                                $identity = Zend_Auth::getInstance()->getIdentity();
+                                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
+                      ?>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
+                      <?php } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+                          <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
+                      <?php }?>
+                      </div>
                       
 
                       <div  class="row sidebar-right-info" >                                
