--- a/application/modules/default/views/scripts/support/paymentcancel.phtml
+++ b/application/modules/default/views/scripts/support/paymentcancel.phtml
@@ -30,7 +30,7 @@
                 <div class="content col-md-8">
                     <h2><?= $this->paymentMessage ?></h2>
                     <p>Your Donation was canceled. Please try again.</p>
-                    <p><a href="/donate">Back</a></p>
+                    <p><a href="/support">Back</a></p>
                 </div>
                 <div class="sidebar-right col-md-2"></div>
             </div>
