--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -240,15 +240,13 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
 
         <div class="supportDiv" >
         <?php 
-                  $identity = Zend_Auth::getInstance()->getIdentity();
-                  if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' &&
-                    (null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))
-                        )) {                                                  
+                $identity = Zend_Auth::getInstance()->getIdentity();
+                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
         ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
-        <?php } else if(Zend_Auth::getInstance()->getIdentity()->roleName == 'admin' && (null != $identity && $this->isSupporter($identity->member_id))) { ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support us</a>
-        <?php }?>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
+        <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
+        <?php   }?>
         </div>
 
         <div  class="row sidebar-right-info" >                                
