--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -274,6 +274,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
     '    $(document).ready(function(){
                 MenuHover.setup();                    
                 LoginContainer.update();
-                RssNews.setup();                
+                RssNews.setup();  
+                PlinglistContent.setup();                    
             });
         ');
